Magnets move, y'all

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         animation: fix-image-rendering-bug .0001s; 
       }
 
-      @keyframes fix-image-rendering-bug {   from { opacity: 0.9999; }   to { opacity: 1; } 
+      @keyframes fix-image-rendering-bug { from { opacity: 0.9999; } to { opacity: 1; } }
     </style>
     <script type="module" src="src/index.ts"></script>
   </head>
